--- a/src/assets/scss/components/_first.scss
+++ b/src/assets/scss/components/_first.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 .first video{
   position: absolute;
@@ -30,4 +31,8 @@
 }
 .first-header{
   color: white;
+}
+
+.scrolled{
+  color: pink;
 }
